<resources>
    <string name="app_name">NoteApp</string>
    <string name="notes">NOTES</string>
    <string name="add_a_new_note">Add a new note</string>
    <string name="add_new_note">Add new note</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save_note">Save note</string>
    <string name="delete_note">Delete note</string>
</resources>