<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#6E7EDA"
    android:padding="20dp"
    tools:context=".view.AddNoteActivity">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_note"
        android:textStyle="bold"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="#dbcc6f"
        android:layout_margin="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_counter">

        <EditText
            android:id="@+id/title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:background="#6E7EDA"
            android:padding="10dp"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:background="#6E7EDA"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:lines="10"
            android:gravity="top"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:text="@string/save_note"
            android:backgroundTint="#dbcc6f"
            android:textColor="#6E7EDA"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:text="@string/delete_note"
            android:backgroundTint="#dbcc6f"
            android:textColor="#6E7EDA"/>
    </LinearLayout>

</LinearLayout>